feat: Implement core routines & exercise library functionality
This commit introduces the foundational features for managing predefined exercises and user-created workout routines, enabling users to build and organize their training plans.

Key changes include:

**1. Core Domain Layer (`lib/core`):**
    - Added `PredefinedExercise` entity (`core/domain/entities/predefined_exercise.dart`) to model standardized exercises.
    - Added `UserRoutine` and `RoutineExercise` entities (`core/domain/entities/routine.dart`) to model user-specific routines and exercises within them. Includes `copyWith` for `UserRoutine`.
    - Defined abstract `PredefinedExerciseRepository` (`core/domain/repositories/predefined_exercise_repository.dart`) for fetching predefined exercises.
    - Defined abstract `RoutineRepository` (`core/domain/repositories/routine_repository.dart`) for CRUD operations on user routines.

**2. Exercise Explorer Feature (`lib/features/exercise_explorer`):**
    - Implemented `PredefinedExerciseRepositoryImpl` (`data/repositories/`) using Firestore to fetch exercises.
    - Created `ExerciseExplorerCubit` and `ExerciseExplorerState` (`presentation/cubit/`) to manage the state of the exercise list.
    - Developed `ExerciseExplorerScreen` (`presentation/screens/`) to display the list of predefined exercises.
        - Added `isSelectionMode` parameter to allow the screen to be used for selecting an exercise (e.g., when adding to a routine).
    - Created `ExerciseListItem` widget (`presentation/widgets/`) to display individual exercises, supporting selection mode.

**3. User Routines Feature (`lib/features/routines`):**
    - Implemented `RoutineRepositoryImpl` (`data/repositories/`) using Firestore for all CRUD operations on user routines.
        - Includes user ownership checks and server timestamps for `createdAt`/`updatedAt`.
    - Created `UserRoutinesCubit` and `UserRoutinesState` (`presentation/cubit/`) to manage the list of user's routines.
        - Incl

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,13 +9,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^2.32.0 # Або остання версія
-  firebase_auth: ^4.20.0 # Або остання версія
+  firebase_core: ^3.13.1 # Або остання версія
+  firebase_auth: ^5.5.4 # Або остання версія
   google_sign_in: ^6.2.1 # Або остання версія
-  cloud_firestore: ^4.17.5 # Або остання версія
+  cloud_firestore: ^5.6.8 # Або остання версія
   animated_background: ^2.0.0
 
-  # Додай сюди інші залежності, якщо вони є
+  flutter_bloc: ^9.1.1  
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
