--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,34 +1,52 @@
 name: muscle_up
-description: "A new Flutter project."
-publish_to: 'none' # Remove this line if you want to publish to pub.dev
-version: 0.1.0 # Або твоя поточна версія
+description: "Next-gen Fitness App. New height, New companions."
+publish_to: 'none' 
+version: 0.1.0
 
 environment:
-  sdk: ^3.8.0 # Або твоя поточна версія Dart SDK
+  sdk: ^3.8.0 
 
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^3.13.1 # Або остання версія
-  firebase_auth: ^5.5.4 # Або остання версія
-  google_sign_in: ^6.2.1 # Або остання версія
-  cloud_firestore: ^5.6.8 # Або остання версія
+  firebase_core: ^3.13.1
+  firebase_auth: ^5.5.4
+  google_sign_in: ^6.2.1
+  cloud_firestore: ^5.6.8
   animated_background: ^2.0.0
-
   flutter_bloc: ^9.1.1  
   equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0 # Або остання версія
+  flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+  android: "launcher_icon" 
+  ios: true               
+  image_path: "assets/images/app_icon.png" 
+  min_sdk_android: 23  
+  # web:
+  #   generate: true
+  #   image_path: "assets/images/app_icon_web.png"
+  #   background_color: "#ED5D1A" 
+  #   theme_color: "#ED5D1A"     
+  # windows:
+  #   generate: true
+  #   image_path: "assets/images/app_icon_windows.png"
+  #   icon_size: 48 
+  # macos:
+  #   generate: true
+  #   image_path: "assets/images/app_icon_macos.png"
 
 flutter:
   uses-material-design: true
 
   assets:
-    - assets/images/ # Для логотипу Google та інших зображень
-    # - assets/some_other_folder/ # Якщо є інші асети
+    - assets/images/ 
+    - assets/fonts/ # Переконайтесь, що ця папка містить ваші шрифти
 
   fonts:
     - family: Inter
@@ -48,4 +66,18 @@ flutter:
           weight: 800
         - asset: assets/fonts/Inter_18pt-Black.ttf
           weight: 900
-    # Можеш додати інші сімейства шрифтів тут
+          
+    - family: IBMPlexMono  # <--- ДОДАНО НОВИЙ ШРИФТ
+      fonts:
+        - asset: assets/fonts/IBMPlexMono-Regular.ttf
+          # weight: 400 # (опціонально, якщо це звичайне накреслення)
+        - asset: assets/fonts/IBMPlexMono-Bold.ttf
+          weight: 700 # (для Bold накреслення)
+        # - asset: assets/fonts/IBMPlexMono-Italic.ttf # (приклад, якщо є)
+        #   style: italic
+        # - asset: assets/fonts/IBMPlexMono-BoldItalic.ttf # (приклад, якщо є)
+        #   weight: 700
+        #   style: italic
+        # - asset: assets/fonts/IBMPlexMono-Light.ttf # (приклад, якщо є)
+        #   weight: 300
+        # ... додайте інші накреслення IBM Plex Mono за потреби
