--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   animated_background: ^2.0.0
   flutter_bloc: ^9.1.1  
   equatable: ^2.0.5
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
