--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,31 +4,42 @@ publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: ^3.8.0 
+  sdk: '>=3.0.0 <4.0.0' # Оновлено для відповідності сучасним версіям Flutter/Dart
 
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^3.13.1
-  firebase_auth: ^5.5.4
+  
+  # Firebase
+  firebase_core: ^3.13.1 
+  firebase_auth: ^5.5.4 
   google_sign_in: ^6.2.1
   cloud_firestore: ^5.6.8
-  animated_background: ^2.0.0
+  # FirebaseFirestore.instance.settings = const Settings(persistenceEnabled: true); - потім додаш для офлайн
+
+  # State Management
   flutter_bloc: ^9.1.1  
-  equatable: ^2.0.5
-  intl: ^0.19.0
+  equatable: ^2.0.5    
+
+  # UI & Utils
+  intl: ^0.19.0 # Для форматування дати/часу
+  animated_background: ^2.0.0 # Для сторінки логіну (можливо, варто переглянути, якщо не використовується активно)
+  confetti: ^0.7.0 # Для екрану завершення тренування
+
+  # Cupertino Icons (якщо потрібні стандартні iOS іконки)
+  # cupertino_icons: ^1.0.2 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^5.0.0 # Оновлено для останніх рекомендацій лінтера
   flutter_launcher_icons: ^0.13.1
 
 flutter_launcher_icons:
   android: "launcher_icon" 
   ios: true               
   image_path: "assets/images/app_icon.png" 
-  min_sdk_android: 23  
+  min_sdk_android: 23 # Мінімальна версія SDK для Android (переконайтеся, що відповідає вашому flutter.minSdkVersion в build.gradle)
   # web:
   #   generate: true
   #   image_path: "assets/images/app_icon_web.png"
@@ -47,7 +58,7 @@ flutter:
 
   assets:
     - assets/images/ 
-    - assets/fonts/ # Переконайтесь, що ця папка містить ваші шрифти
+    - assets/fonts/ 
 
   fonts:
     - family: Inter
@@ -68,17 +79,15 @@ flutter:
         - asset: assets/fonts/Inter_18pt-Black.ttf
           weight: 900
           
-    - family: IBMPlexMono  # <--- ДОДАНО НОВИЙ ШРИФТ
+    - family: IBMPlexMono
       fonts:
         - asset: assets/fonts/IBMPlexMono-Regular.ttf
-          # weight: 400 # (опціонально, якщо це звичайне накреслення)
         - asset: assets/fonts/IBMPlexMono-Bold.ttf
-          weight: 700 # (для Bold накреслення)
-        # - asset: assets/fonts/IBMPlexMono-Italic.ttf # (приклад, якщо є)
+          weight: 700
+        # - asset: assets/fonts/IBMPlexMono-Italic.ttf
         #   style: italic
-        # - asset: assets/fonts/IBMPlexMono-BoldItalic.ttf # (приклад, якщо є)
+        # - asset: assets/fonts/IBMPlexMono-BoldItalic.ttf
         #   weight: 700
         #   style: italic
-        # - asset: assets/fonts/IBMPlexMono-Light.ttf # (приклад, якщо є)
+        # - asset: assets/fonts/IBMPlexMono-Light.ttf
         #   weight: 300
-        # ... додайте інші накреслення IBM Plex Mono за потреби
