--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,42 +4,39 @@ publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: '>=3.0.0 <4.0.0' # Оновлено для відповідності сучасним версіям Flutter/Dart
+  sdk: ^3.8.0 # Або ваша актуальна версія Dart SDK
 
 dependencies:
   flutter:
     sdk: flutter
-  
-  # Firebase
-  firebase_core: ^3.13.1 
-  firebase_auth: ^5.5.4 
+  firebase_core: ^3.13.1
+  firebase_auth: ^5.5.4
   google_sign_in: ^6.2.1
   cloud_firestore: ^5.6.8
-  # FirebaseFirestore.instance.settings = const Settings(persistenceEnabled: true); - потім додаш для офлайн
-
-  # State Management
-  flutter_bloc: ^9.1.1  
-  equatable: ^2.0.5    
-
-  # UI & Utils
+  animated_background: ^2.0.0 # Для LoginPage
+  flutter_bloc: ^9.1.1 # Або ваша версія
+  bloc: 9.0.0 # Додайте або перевірте наявність цієї залежності (версія може відрізнятися)
+  equatable: ^2.0.5
   intl: ^0.19.0 # Для форматування дати/часу
-  animated_background: ^2.0.0 # Для сторінки логіну (можливо, варто переглянути, якщо не використовується активно)
-  confetti: ^0.7.0 # Для екрану завершення тренування
+  
+  # Додані пакети для WorkoutCompleteScreen
+  confetti: ^0.7.0 # Або актуальна версія
+  lottie: ^3.1.2 # Або актуальна версія
 
-  # Cupertino Icons (якщо потрібні стандартні iOS іконки)
-  # cupertino_icons: ^1.0.2 
+  # Додано для колекцій (може знадобитися для firstWhereOrNull, хоча часто є в SDK)
+  # collection: ^1.18.0 # Якщо ви використовуєте specific collection utilities
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0 # Оновлено для останніх рекомендацій лінтера
+  flutter_lints: ^5.0.0 # Або актуальна версія
   flutter_launcher_icons: ^0.13.1
 
 flutter_launcher_icons:
   android: "launcher_icon" 
   ios: true               
   image_path: "assets/images/app_icon.png" 
-  min_sdk_android: 23 # Мінімальна версія SDK для Android (переконайтеся, що відповідає вашому flutter.minSdkVersion в build.gradle)
+  min_sdk_android: 23  
   # web:
   #   generate: true
   #   image_path: "assets/images/app_icon_web.png"
@@ -59,6 +56,7 @@ flutter:
   assets:
     - assets/images/ 
     - assets/fonts/ 
+    - assets/animations/ # <--- ДОДАНО ДЛЯ LOTTIE АНІМАЦІЙ
 
   fonts:
     - family: Inter
@@ -84,10 +82,3 @@ flutter:
         - asset: assets/fonts/IBMPlexMono-Regular.ttf
         - asset: assets/fonts/IBMPlexMono-Bold.ttf
           weight: 700
-        # - asset: assets/fonts/IBMPlexMono-Italic.ttf
-        #   style: italic
-        # - asset: assets/fonts/IBMPlexMono-BoldItalic.ttf
-        #   weight: 700
-        #   style: italic
-        # - asset: assets/fonts/IBMPlexMono-Light.ttf
-        #   weight: 300
