basic progress in progress page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   bloc: 9.0.0 # Додайте або перевірте наявність цієї залежності (версія може відрізнятися)
   equatable: ^2.0.5
   intl: ^0.19.0 # Для форматування дати/часу
+  flutter_svg: ^2.0.10+1
   
   # Додані пакети для WorkoutCompleteScreen
   confetti: ^0.7.0 # Або актуальна версія
