+ Finished progress screen + Tweaks around current set + smarter start workout

--- a/functions/package.json
+++ b/functions/package.json
@@ -2,7 +2,7 @@
   "name": "functions",
   "scripts": {
     "lint": "eslint --ext .ts,.js .",
-    "build": "tsc",
+    "build": "echo '>>>>>> NPM RUN BUILD IS EXECUTING NOW IN functions/package.json <<<<<<' && tsc",
     "serve": "npm run build && firebase emulators:start --only functions",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
