--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations: 
+    sdk: flutter         
   
   # Firebase SDK
   firebase_core: ^3.13.1
@@ -23,7 +25,7 @@ dependencies:
   
   # Utilities
   equatable: ^2.0.5
-  intl: ^0.19.0
+  intl: ^0.20.2 # <-- UPDATED THIS LINE
   image_picker: ^1.1.2 
   
   # Graphics & Animations
@@ -47,6 +49,7 @@ flutter_launcher_icons:
 
 flutter:
   uses-material-design: true
+  generate: true 
 
   assets:
     - assets/images/
