--- a/functions/package.json
+++ b/functions/package.json
@@ -1,30 +1,13 @@
 {
-  "name": "functions",
+  "name": "muscle-up-db-loader",
+  "version": "1.0.0",
+  "description": "Script to populate the Muscle UP! exercises database",
+  "main": "populateDb.js",
+  "type": "module",
   "scripts": {
-    "lint": "eslint --ext .ts,.js .",
-    "build": "tsc",
-    "serve": "npm run build && firebase emulators:start --only functions",
-    "shell": "npm run build && firebase functions:shell",
-    "start": "npm run shell",
-    "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "start": "node populateDb.js"
   },
-  "engines": {
-    "node": "20"
-  },
-  "main": "lib/index.js",
   "dependencies": {
-    "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.0.1" 
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.12.0",
-    "@typescript-eslint/parser": "^5.12.0",
-    "eslint": "^8.9.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-plugin-import": "^2.25.4",
-    "firebase-functions-test": "^3.1.0",
-    "typescript": "^5.4.5"
-  },
-  "private": true
+    "firebase-admin": "^12.1.0"
+  }
 }
