--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,9 +25,10 @@ dependencies:
   
   # Utilities
   equatable: ^2.0.5
-  intl: ^0.20.2 # <-- UPDATED THIS LINE
+  intl: ^0.20.2 
   image_picker: ^1.1.2 
-  
+  image_cropper: ^9.1.0 # <-- UPDATED THIS LINE
+
   # Graphics & Animations
   flutter_svg: ^2.0.10+1
   animated_background: ^2.0.0
