--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: muscle_up
 description: "Next-gen Fitness App. New height, New companions."
 publish_to: 'none' 
-version: 0.9.5
+version: 0.9.9
 
 environment:
   sdk: ^3.8.0 
@@ -27,13 +27,16 @@ dependencies:
   equatable: ^2.0.5
   intl: ^0.20.2 
   image_picker: ^1.1.2 
-  image_cropper: ^9.1.0 # <-- UPDATED THIS LINE
+  image_cropper: ^9.1.0 
 
   # Graphics & Animations
   flutter_svg: ^2.0.10+1
   animated_background: ^2.0.0
   confetti: ^0.7.0
   lottie: ^3.1.2
+  shared_preferences: ^2.5.3
+  bloc_test: ^10.0.0
+  mocktail: ^1.0.4
 
 dev_dependencies:
   flutter_test:
@@ -41,12 +44,36 @@ dev_dependencies:
   
   flutter_lints: ^5.0.0
   flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.4.0 # <--- ДОДАНО ПАКЕТ
 
+# Конфігурація для іконки додатку
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
   image_path: "assets/images/app_icon.png"
   min_sdk_android: 23
+
+# Конфігурація для екрану-заставки (splash screen)
+flutter_native_splash:
+  # Замість простого кольору, ми використовуємо фонове зображення, яке є градієнтом.
+  background_image: "assets/images/splash_gradient_background.png"
+  background_image_dark: "assets/images/splash_gradient_background_dark.png" # Опціонально, для темної теми
+
+  # Логотип, що буде відображатися ПОСЕРЕДИНІ поверх градієнтного фону.
+  image: "assets/images/splash_logo.png"
+  image_dark: "assets/images/splash_logo_dark.png" # Опціонально, для темної теми
+
+  # Налаштування для Android 12+ (дуже важливо)
+  android_12:
+    # Іконка для Android 12+ (зазвичай, та сама, що іконка додатку)
+    image: "assets/images/app_icon.png" 
+    
+    # Колір фону ПІД іконкою. Використайте основний колір вашого градієнту.
+    icon_background_color: "#ED5D1A" # Помаранчевий
+    
+    image_dark: "assets/images/app_icon.png"
+    icon_background_color_dark: "#C70039" # Темно-червоний (кінцевий колір градієнту)
+
 
 flutter:
   uses-material-design: true
